@@ -1,0 +1,13 @@
+code 200
+setglobal start __url__
+
+# test code 403, access denied
+go ./restricted
+code 403
+show
+
+# test code 404, does not exist
+go $start
+go ./does-not-exist
+code 404
+show
